--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-slate
-title: Attacking Machine Learning models with Adversarial Examples
+title: Robustness in Machine Learning Models
